--- a/Tasks-mobile/package.json
+++ b/Tasks-mobile/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^47.0.11",
+    "expo": "^47.0.0",
+    "expo-constants": "^14.0.2",
+    "expo-modules-core": "^1.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
