--- a/Tasks-mobile/package.json
+++ b/Tasks-mobile/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
     "expo-constants": "^14.0.2",
     "expo-modules-core": "^1.1.1",
@@ -16,9 +19,8 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "typescript": "^4.6.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "react-native-calendars": "^1.1293.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
