--- a/Tasks-mobile/package.json
+++ b/Tasks-mobile/package.json
@@ -14,6 +14,7 @@
     "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
     "expo-constants": "^14.0.2",
+    "expo-dev-client": "^2.0.1",
     "expo-modules-core": "^1.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
