--- a/Tasks-mobile/package.json
+++ b/Tasks-mobile/package.json
@@ -14,16 +14,17 @@
     "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
     "expo-constants": "^14.0.2",
-    "expo-dev-client": "^2.0.1",
+    "expo-dev-client": "~2.0.1",
     "expo-modules-core": "^1.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": false
 }
