--- a/Tasks-mobile/package.json
+++ b/Tasks-mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "axios": "^1.3.4",
     "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
     "expo-constants": "^14.0.2",
