--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-vector-icons": "^9.2.0",
     "typescript": "^4.6.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native-vector-icons": "^6.4.13"
   },
   "private": false
 }
