--- a/app.json
+++ b/app.json
@@ -3,13 +3,19 @@
     "name": "Tasks-mobile",
     "slug": "Tasks-mobile",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "extra": {
       "eas": {
         "projectId": "953a9aa2-3a27-4eb4-b259-c47fd0c07b54"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
+      ]
+    ]
   }
 }
