--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
+    "expo-camera": "~13.1.0",
     "expo-constants": "^14.0.2",
     "expo-dev-client": "~2.0.1",
     "expo-modules-core": "^1.1.1",
