--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.10",
     "typescript": "^4.6.3",
     "yarn": "^1.22.19"
   },
