--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.3.4",
     "calendars": "^0.0.1-alpha",
     "expo": "^47.0.0",
+    "expo-asset": "~8.7.0",
     "expo-constants": "^14.0.2",
     "expo-dev-client": "~2.0.1",
+    "expo-font": "~11.0.1",
     "expo-modules-core": "^1.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
